value classes